--- a/app/views/client_mailer/thank_you_notification.html.haml
+++ b/app/views/client_mailer/thank_you_notification.html.haml
@@ -4,6 +4,22 @@
       %td#bodyCell{:align => "center", :valign => "top"} 
         =render 'thank_you_header'
     %tr
-      = render 'funder_header'
-      = render 'other_funders_wording'
-      
+      -if @mailer.can_load_header? 
+        = render 'ambassador_header'
+        
+      /[if (gte mso 9)|(IE)]
+        </td>
+        </tr>
+        </table>
+
+    -if @mailer.other_ambassadors.present?
+      %tr
+        %table.templateContainer{:border => "0", :cellpadding => "0", :cellspacing => "0", :width => "100%"}
+          %tr
+            %td{:valign => "top"}
+              /[if (gte mso 9)|(IE)]
+                <table align="center" border="0" cellspacing="0" cellpadding="0" width="600" style="width:600px;">
+                <tr>
+                <td align="center" valign="top" width="200" style="width:200px;">
+              -@mailer.other_ambassadors.each do |ambassador|
+                = render 'other_ambassador_description', ambassador: ambassador
